# proton-to-icloud

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/diagnose-failures/: SKILL.md  imap_diagnostic.py
.claude/skills/upload-guide/: SKILL.md
.github/workflows/: ci.yml  publish.yml
scripts/: sample_test_set.py
src/proton_to_icloud/: __init__.py  __main__.py  batch.py  cli.py  metadata.py  picker.py  progress.py  upload.py
tests/: test_batch.py  test_metadata.py  test_picker.py  test_progress.py  test_upload.py
