[project]
name = "proton-to-icloud"
version = "0.1.0"
description = "Migrate Proton Mail exports (.eml) to iCloud Mail via IMAP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Andreas Buchmueller", email = "hello@buchmueller.dev" },
]
keywords = ["proton", "protonmail", "icloud", "email", "migration", "imap", "eml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/abuchmueller/proton-to-icloud"
Repository = "https://github.com/abuchmueller/proton-to-icloud"
Issues = "https://github.com/abuchmueller/proton-to-icloud/issues"

[project.scripts]
proton-to-icloud = "proton_to_icloud.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proton_to_icloud"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "C90", "E", "F", "I", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["proton_to_icloud"]

[tool.pytest.ini_options]
testpaths = ["tests"]
